# Chess-Elo-Estimator

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
engine/eval/: material.cc  material.h
engine/eval/tables/header/: pst.h
engine/eval/tables/src/: pst.cc
engine/search/: MoveExecutor.cc  MoveExecutor.h
engine/search/header/: alphabeta.h  iterdeep.h  minimax.h  negamax.h  ordering.h  quiescence.h
engine/search/src/: alphabeta.cc  iterdeep.cc  negamax.cc  ordering.cc  quiescence.cc
src/: main.cpp
src/app/: StockfishAI.cpp
src/app/api/: Board.cpp  convertMoveToString.cpp  moveHistory.cpp  undoMove.cpp
src/app/api/sub/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/app/data/: DeleteSaveFile.cpp  LoadGame.cpp  SaveGame.cpp
src/app/interface/: Menu.cpp  UI.cpp
src/app/user/: AccountManager.cpp  FileManager.cpp
src/header/: Game.h  Pieces.h  Player.h  StockfishAI.h
src/header/api/: Board.h  convertMoveToString.h  moveHistory.h  undoMove.h
src/header/api/sub/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/header/data/: DeleteSaveFile.h  LoadGame.h  SaveGame.h
src/header/interface/: Menu.h  UI.h
src/header/user/: AccountManager.h  FileManager.h
test/: CMakeLists.txt  test.cpp
